k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemption-api
  namespace: redemption
  labels:
    app.kubernetes.io/name: redemption-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redemption-api
  ports:
    - name: http
      port: 80
      targetPort: http
